Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-May-2011 Christophe Demko
 # [#25679] Typo of pagination parts (as default value) (bill richardson, masanori yamamoto)
 # [#25447] New feature: Add Site name after Page title (Piotr Mocko)

17-May-2011 Christophe Demko
 # [#25894] *Fatal Error: JDocumentFeed disabled (Jean-Marie Simonet)

15-May-2011 Jean-Marie Simonet
 #$ [#23490] Remove option to compress the JS for Tiny MCE. Thanks Rouven.

14-May-2011 Jean-Marie Simonet
 # [#25082] Update Mootools to version 1.3.2. Thanks Rouven, Michael
 # [#25850] Incorrect ordering of plugins type filter. Thanks Dennis.
 # [#25754] Removing double semi-colons. Thanks Dennis
 # [#25681] IE <= 7 and Beez templates - Incorrect mouse pointer over open/close "button" if right column is visible. Thanks Peter.
 
14-May-2011 Christophe Demko
 # [#25772] Librairie JDate translates month and day strings for RFC822 format which is not correct

13-May-2011 Jean-Marie Simonet
$ [#25872] *Wrong tip for contact redirect
# [#25874] JDocumentRaw is disabled

12-May-2011 Mark Dexter
 # Fix hard-coded jos table prefix in weblinks SQL install file
 # [#25867] Sync platform to address language switching issues; update platform calls using deprecated API

12-May-2011 Jean-Marie Simonet
 #S [#25864] Split Language Manager: Installed Languages into separate views. Thanks Michael.
 
10-May-2011 Jean-Marie Simonet
 #$ [#25845] *Breadcrumbs never use the language string for Home
 #$ [#25837] *Admin menu does not differentiate between default Home set to "All" and those set to a Content Language. Thanks Christophe.

09-May-2011 Jean-Marie Simonet
 [#25830] *404 - page not found - error.php - for template beez_20 - not working properly
 
05-May-2011 Jean-Marie Simonet